# hillel_course_pro_homeworks

./: CMakeLists.txt  ConfigManager.h  DetailedReportVisitor.cpp  DetailedReportVisitor.h  Logger.cpp  Logger.h  ShortReportVisitor.cpp  ShortReportVisitor.h  Transaction.cpp  Transaction.h  TransactionVisitor.h  main.cpp
hw10/src/: Course.hpp  Student.hpp  main.cpp
hw12/: CMakeLists.txt  main.cpp
hw12/include/: Task.hpp  TaskController.hpp  TaskManager.hpp  TaskView.hpp
hw12/src/: Task.cpp  TaskController.cpp  TaskManager.cpp  TaskView.cpp
hw13/: main.cpp
hw14/: main.cpp
hw17/: main.cpp
hw20/: main.cpp
hw22/: tcp_server.cpp
hw23/: CMakeLists.txt  CustomDelegate.h  CustomFileSystemModel.h  main.cpp
hw24/: CustomFileSystemModel.cpp  CustomFileSystemModel.h  main.cpp  main.qml
hw3/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  ConfigManager.h  Logger.h  main.cpp
hw8/: CMakeLists.txt
hw8/include/: SharedPtr.hpp
hw8/src/: SharedPtr.hpp  main.cpp
hw9/: CMakeLists.txt
hw9/src/: Course.hpp  Student.hpp  main.cpp
